# src/models/VasosModels.js
@@ -1,36 +1,36 @@
 const { json } = require('express');
 const fs = require('fs');
 const path = require('path');
-const pathEstoque = path.join(__dirname, '../db/EstoqueDb.json');
+const pathEstoqueJson = path.join(__dirname, '../db/EstoqueDb.json');
 
 const getData = () => {
 
-    let data = fs.readFileSync(pathEstoque, 'utf-8');
+    let data = fs.readFileSync(pathEstoqueJson, 'utf-8');
     return JSON.parse(data);
 }
 
 const saveData = (data) =>{
-    fs.writeFileSync(pathEstoque, data);
+    fs.writeFileSync(pathEstoqueJson, data);
 }
 
-const getAllPlantas = (limite, pagina)=>{
+const getAllVasos = (limite, pagina)=>{
 
     const start = parseInt(limite)*(parseInt(pagina-1));
     const end = parseInt(start)+parseInt(limite);
 
-    return getData().estoque.filter(x => x.tipo=="planta").slice(start, end);
+    return getData().estoque.filter(x => x.tipo=="vaso").slice(start, end);
 };
 
-const getPlantasById = (id)=>{
+const getVasosById = (id)=>{
     let data = getData();
 
-    return data.estoque.filter(x => x.id==id && x.tipo=="planta");
+    return data.estoque.filter(x => x.id==id && x.tipo=="vaso");
 };
 
-const createPlanta = (nome, preco, quantidade)=>{
+const createVaso = (nome, preco, quantidade)=>{
     let data = getData();
     
-    let newPlanta = {id:data.ultimoId+1, nome:nome, preco:preco,quantidade:quantidade, tipo:"planta"};
+    let newPlanta = {id:data.ultimoId+1, nome:nome, preco:preco,quantidade:quantidade, tipo:"vaso"};
     data.estoque.push(newPlanta);
 
     data.ultimoId =data.ultimoId+1;
@@ -40,15 +40,16 @@ const createPlanta = (nome, preco, quantidade)=>{
     return newPlanta;
 };
 
-const updatePlanta = (id, nome, preco, quantidade)=>{
+const updateVaso = (id, nome, preco, quantidade)=>{
     let data = getData();
-    let index = data.estoque.findIndex(x => x.id==id && x.tipo == "planta");
+    let index = data.estoque.findIndex(x => x.id==id && x.tipo == "vaso");
 
     if(index!=-1) data.estoque[index] = {
         id: id,
         nome: nome ? nome : data.estoque[index].nome,
         preco: preco ? preco : data.estoque[index].preco,
-        quantidade: quantidade ? quantidade : data.estoque[index].quantidade
+        quantidade: quantidade ? quantidade : data.estoque[index].quantidade,
+        tipo: "vaso"
     }
 
     saveData(JSON.stringify(data));
@@ -56,11 +57,11 @@ const updatePlanta = (id, nome, preco, quantidade)=>{
     return data.estoque[index];
 };
 
-const deletePlanta = (id)=>{
+const deleteVaso = (id)=>{
     let data = getData();
     let obj = {};
 
-    let index = data.estoque.findIndex(x => x.id == id && x.tipo == "planta");
+    let index = data.estoque.findIndex(x => x.id == id && x.tipo == "vaso");
 
     if (index !== -1) {
         obj = data.estoque.splice(index, 1);
@@ -71,9 +72,9 @@ const deletePlanta = (id)=>{
 };
 
 module.exports = {
-    getAllPlantas,
-    getPlantasById,
-    createPlanta,
-    updatePlanta,
-    deletePlanta
+    getAllVasos,
+    getVasosById,
+    createVaso,
+    updateVaso,
+    deleteVaso
 }
